outros componentes do bootstrap

--- a/13-jumbotron/jumbotron.html
+++ b/13-jumbotron/jumbotron.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Base</title>
+    <title>Jumbotron</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
 
-
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="display-3">Olá Bem-Vindo</h1>
+            <p class="lead">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Ducimus delectus harum, aperiam aspernatur ex mollitia.
+            </p>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, illum.</p>
+            <a href="#" class="btn btn-primary btn-lg">Veja abaixo</a>
+        </div>
+    </div>
 
     <!-- SCRIPTS -->
     <!-- jquery -->
